# qchem

./: .env  .gitignore  Install.txt  README.md  example.xyz  publish.py  pyproject.toml  qchem_tutorial.py  random.txt  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml  test.yml
notebooks/: qchem.py
qchem/: ClusterCalculation.py  Molecule.py  Optimize.py  OrcaCalculation.py  OrcaInputFile.py  Parser.py  XYZFile.py  __init__.py  molecule.py  optimize.py  orcaCalculation.py  parser.py  utils.py
qchem/.ipynb_checkpoints/: Molecule-checkpoint.py
qchem/Calculation/: BaseCalculation.py  BaseOrcaCalculation.py  ClusterCalculation.py  Downloads  Frequency.py  GOAT.py  GeoOpt.py  OrcaCalcs.py  OrcaCalculation.py  OrcaInputFile.py  Start.py  __init__.py  theoryselector.py
qchem/Calculation/.ipynb_checkpoints/: ClusterCalculation-checkpoint.py  GeoOpt-checkpoint.py  OrcaCalculation-checkpoint.py  __init__-checkpoint.py
qchem/Data/: Constants.py  Enums.py  __init__.py  constants.py
qchem/Data/.ipynb_checkpoints/: Constants-checkpoint.py  Enums-checkpoint.py
qchem/Enums/: BasisSet.py  CalculationTypes.py  OrcaBasisSet.py  OrcaCalculationTypes.py  OrcaDensityFunctional.py  __init__.py
qchem/Pipelines/: GeoOpt.py  Spectra.py  __init__.py
tests/: FrequencyTest.py  GeooptTest.py  GoatTest.py  ParserTest.py  frequency_test.py  geoopt_test.py  goat_test.py  parser_test.py  spectraTest.py  spectra_test.py  test.inp  test_parser.py  test_random.py  tests.py  utils_test.py
tests/notebook_/: imports.txt
tests/test_files/: Butane.xyz  aspirin_raw.xyz  caffeine.xyz  dypyrroMethane.xyz  ethane.xyz  nano.xyz  propane.xyz
tests/test_files/Spectra/: Ethane_Spectra.csv  Ethane_Spectra_NoHeader.csv
tests/test_files/output_files/: CPDMSA_goat.out  CPDMSA_nmr.out  CPDMSA_opt (2).out  aspirin_ftir.out
tests/test_files/output_files/extracted/: CPDMSA_goat_parsed.txt  CPDMSA_nmr_parsed.txt  CPDMSA_opt (2)_parsed.txt  aspirin_ftir_parsed.txt
tools/: utils.py
