[tool.poetry]
name = "qchem"
version = "0.1.0"
description = "This is a project used for quantum chemistry simulations"
authors = ["Matthew Athanasopoulos <matthew.athanasopoulos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
pennylane = "^0.34.0"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
chemview = "^0.6"
pyarrow = "^15.0.0"
qiskit-nature = "^0.7.1"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.1"
pytest = "^8.0.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
