[project]
name = "qchem"
version = "0.6.0"
description = "QChem is a project used for Quantum Chemistry Simulations and Data Anaylsis/Visualization, developed by the Formula Nano student design team at the University of Waterloo."
authors = [
    {name = "Alex Dufresne-Nappert"},
    {name = "Ryan Miller"},
    {name = "Cameron Chin"},
    {name = "Matthew Athanasopoulos"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"

[tool.poetry]

[poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
chemview = "^0.6"
seaborn = "^0.13.2"
numpy = "^1.0.0"
pymatgen = "^2024.11.13"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.2"
pytest = "^8.0.0"
black = "^24.1.1"
flake8 = "^7.1.1"
poetry-plugin-shell = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"